<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PADC-3-F-TLA-MM-News</string>
    <string name="action_settings">Settings</string>
    <string name="text_news_brief">
        လီဗာပူးအသင်းရဲ့ကွင်းလယ်ဖန်တီးရှင် ကော်တင်ဟိုကို ပြီးခဲ့တဲ့ နွေရာသီက ဘာစီလိုနာအသင်းက ၃ ကြိမ်တိတိ ကမ်းလှမ်းခဲ့ပြီး လီဗာပူးအသင်းက ရောင်းချဖို့ ငြင်းပယ်ခဲ့ပါတယ်။ ကော်တင်ဟိုအနေနဲ့ လီဗာပူးအသင်းနဲ့ စာချုပ်သစ်ချုပ်ဆိုဖို့ စိတ်မဝင်စားဘဲ ဘာစီလိုနာအသင်းကိုသာ ပြောင်းရွှေ့လိုနေတာဖြစ်ပါတယ်။
    </string>
    <string name="text_news_details">
        လက်ရှိမှာတော့ လီဗာပူးအသင်းအနေနဲ့ အိမ်ကွင်းနိုင်ပွဲနဲ့အတူ ရမှတ် ၁၂ မှတ်ရရှိကာ အုပ်စု ပထမဖြင့် ချန်ပီယံ လိဂ် အုပ်စုအဆင့်ကို ဖြတ်ကျော်နိုင်ခဲ့ပြီလည်း ဖြစ်ပါတယ်။
ဒါ့အပြင် ၁၉၉၈ ခုနှစ်က ဖာဂူဆန်လက်ထက် မန်ယူအသင်းတင်ခဲ့ဖူးတဲ့စံချိန်ကိုပါ ကျော်ဖြတ်နိုင်ခဲ့တာလည်း ဖြစ်ပါတယ်။
အဆိုပါ စံချိန်ကတော့ အုပ်စုတွင်း သွင်းဂိုးအများဆုံး သွင်းယူနိုင်ခဲ့တာဖြစ်ပြီး ၁၉၉၈ ခုနှစ် ချန်ပီယံလိဂ် ပြိုင်ပွဲ မှာ မန်ယူအသင်းက စုစုပေါင်း သွင်းဂိုး ၂၀ ကို အုပ်စုတွင်းသွင်းကာ သွင်းဂိုးအများဆုံး စံချိန်ကို တင်ထားနိုင်ခဲ့ တာလည်း ဖြစ်ပါတယ်။
လက်ရှိမှာတော့ လီဗာပူးအသင်းက အုပ်စုတွင်း သွင်းဂိုးစုစုပေါင်း ၂၃ ဂိုးအထိ သွင်းယူနိုင်ခဲ့ပြီး မန်ယူအသင်း စံချိန်ကို ကျော်ဖြတ်နိုင်ခဲ့တာလည်း ဖြစ်ပါတယ်။
ဒါပေမယ့်လည်း ယခုနှစ်ယှဉ်ပြိုင်သွားခဲ့တဲ့ ဥရောပ ချန်ပီယံ အုပ်စုတွင်း ပြိုင်ပွဲများတွင် ပြင်သစ်ကလပ် ပီအက်ဂျီအသင်းက စုစုပေါင်း သွင်းဂိုး ၂၅ ဂိုးအထိ သွင်းယူနိုင်ခဲဲ့လို့ အုပ်စုတွင်း သွင်းဂိုးအများဆုံး အသင်းအဖြစ် စံချိန်တင်နိုင်ခဲ့ပြီ ဖြစ်ပါတယ်။
    လက်ရှိမှာတော့ လီဗာပူးအသင်းအနေနဲ့ အိမ်ကွင်းနိုင်ပွဲနဲ့အတူ ရမှတ် ၁၂ မှတ်ရရှိကာ အုပ်စု ပထမဖြင့် ချန်ပီယံ လိဂ် အုပ်စုအဆင့်ကို ဖြတ်ကျော်နိုင်ခဲ့ပြီလည်း ဖြစ်ပါတယ်။
ဒါ့အပြင် ၁၉၉၈ ခုနှစ်က ဖာဂူဆန်လက်ထက် မန်ယူအသင်းတင်ခဲ့ဖူးတဲ့စံချိန်ကိုပါ ကျော်ဖြတ်နိုင်ခဲ့တာလည်း ဖြစ်ပါတယ်။
အဆိုပါ စံချိန်ကတော့ အုပ်စုတွင်း သွင်းဂိုးအများဆုံး သွင်းယူနိုင်ခဲ့တာဖြစ်ပြီး ၁၉၉၈ ခုနှစ် ချန်ပီယံလိဂ် ပြိုင်ပွဲ မှာ မန်ယူအသင်းက စုစုပေါင်း သွင်းဂိုး ၂၀ ကို အုပ်စုတွင်းသွင်းကာ သွင်းဂိုးအများဆုံး စံချိန်ကို တင်ထားနိုင်ခဲ့ တာလည်း ဖြစ်ပါတယ်။
လက်ရှိမှာတော့ လီဗာပူးအသင်းက အုပ်စုတွင်း သွင်းဂိုးစုစုပေါင်း ၂၃ ဂိုးအထိ သွင်းယူနိုင်ခဲ့ပြီး မန်ယူအသင်း စံချိန်ကို ကျော်ဖြတ်နိုင်ခဲ့တာလည်း ဖြစ်ပါတယ်။
ဒါပေမယ့်လည်း ယခုနှစ်ယှဉ်ပြိုင်သွားခဲ့တဲ့ ဥရောပ ချန်ပီယံ အုပ်စုတွင်း ပြိုင်ပွဲများတွင် ပြင်သစ်ကလပ် ပီအက်ဂျီအသင်းက စုစုပေါင်း သွင်းဂိုး ၂၅ ဂိုးအထိ သွင်းယူနိုင်ခဲဲ့လို့ အုပ်စုတွင်း သွင်းဂိုးအများဆုံး အသင်းအဖြစ် စံချိန်တင်နိုင်ခဲ့ပြီ ဖြစ်ပါတယ်။
    </string>
    <string name="title_news_by_category">News By Category</string>
    <string name="menu_item_all_news">All News</string>
    <string name="menu_item_news_by_categories">News By Category</string>
    <string name="screen_title_all_news">All News</string>
    <string name="main_content_header_title"><font color="#FF0000">\'Historic low\' / </font>World\'s confidence in US leadership has collapsed under Trump,poll finds</string>
    <string name="main_content_description">Gallup poll shows approval for something else if it is a good solution for Trmump has fallen to 30%, down from 48% under Obama</string>
    <string name="sub_content_title_1"><font color="#FF0000">US-Mexico border / </font>Donal Trump contradits aide john Keylly on all</string>
    <string name="sub_content_title_2"><font color="#FF0000">Donald Trump / </font>Backlash as president reveals \'Fake News Awards\' winners</string>
    <string name="child_content_1"><font color="#FF0000">\'This happens all the time\' / </font>Why a gay couple take their wedding cake case to the supreme court</string>
    <string name="child_content_2"><font color="#FF0000">March for Life / </font>Trump to give anti-abortion event a rare presidential tuhumbs up</string>
    <string name="child_content_3"><font color="#FF0000">The boss, the boyfriend and the FBI / </font>The Italian woman in the eye of the Trump-Russia inquiry</string>
    <string name="child_content_4"><font color="#FF0000">Amazon / </font>Company shortlists 20 metro areas for second headquarters</string>
    <string name="headlines_title">Headlines</string>
    <string name="news_time">09:40 PM</string>
    <string name="main_content_child_title"><font color="#FF0000">Soccer / </font>Global perceptions of US could hit 2026 World Cup bid</string>
    <string name="lbl_to_register">Register</string>
    <string name="lbl_to_login">Login</string>

    <string name="lbl_click_me">Click Me!</string>
    <string name="btn_forgot_password"><i><u>Forgot Password</u></i></string>
    <string name="btn_to_register"><i><u>New User ? Register</u></i></string>
    <string name="hint_enter_phone">Your Phone Number</string>
    <string name="hint_enter_email">Your Email</string>
    <string name="hint_enter_password">Password</string>
    <string name="lbl_navigate_to_login"><u><i>Already have account ?</i></u></string>
    <string name="lbl_mark_my_home_on_google_map"><u><i>Mark my home on Google Map</i></u></string>
    <string name="lbl_logout">Logout</string>
    
    <string name="msg_to_exit"><xliff:g id="name">%1$s</xliff:g>, Are you sure to exit MM-News?</string>
    <string name="msg_generic_no_data">လက်ရှိ data ပြစရာ မရှိသေးပါ</string>
    <string name="lbl_refresh">Refresh</string>

    <string name="format_likes_users"><xliff:g id="no_of_likes">%1$d</xliff:g> Likes</string>
    <string name="format_comments_users"> - <xliff:g id="no_of_comments">%1$d</xliff:g> Comments</string>
    <string name="format_send_tos_users"> - <xliff:g id="no_of_send_tos">%1$d</xliff:g> Send Tos</string>

</resources>