<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_header_portion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headlines_title"
                android:textColor="@color/primary_text"
                android:textSize="32sp"
                android:textStyle="bold"
                android:typeface="serif"
                />

            <TextView
                android:id="@+id/tv_news_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_access_time_24dp"
                android:layout_gravity="center|end"
                android:drawablePadding="2dp"
                android:text="@string/news_time"
                android:textSize="14sp"
                android:textColor="@color/secondary_text"
                android:typeface="serif"
                />

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_international_news_item"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layout_below="@id/fl_header_portion"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_main_content"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:background="@drawable/card_background">

                    <TextView
                        android:id="@+id/tv_main_content_header_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_content_header_title"
                        android:textColor="@color/primary_text"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:padding="8dp"
                        android:lineSpacingMultiplier="0.9"
                        android:typeface="serif"
                        />

                    <TextView
                        android:id="@+id/tv_main_content_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_content_description"
                        android:layout_below="@id/tv_main_content_header_title"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:textColor="@color/secondary_text"
                        android:typeface="serif"
                        />

                    <ImageView
                        android:id="@+id/iv_main_content_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coutinho"
                        android:layout_below="@id/tv_main_content_description"
                        android:scaleType="centerCrop"
                        android:layout_alignParentBottom="true"
                        />

                </RelativeLayout>

                <HorizontalScrollView
                    android:id="@+id/hsv_main_content_child"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:id="@+id/fl_child_one"
                            android:layout_width="300dp"
                            android:layout_height="80dp"
                            android:background="@drawable/card_blue_background">

                            <TextView
                                android:id="@+id/tv_child_one_text"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:text="@string/main_content_child_title"
                                android:layout_margin="8dp"
                                android:textColor="@color/primary_text"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:typeface="serif"
                                />

                        </FrameLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/divider" />

                        <FrameLayout
                            android:id="@+id/fl_child_two"
                            android:layout_width="300dp"
                            android:layout_height="80dp"
                            android:background="@drawable/card_green_background">

                            <TextView
                                android:id="@+id/tv_child_two_text"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:text="@string/main_content_child_title"
                                android:layout_margin="8dp"
                                android:textColor="@color/primary_text"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:typeface="serif"
                                />

                        </FrameLayout>

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <GridLayout
            android:id="@+id/gl_sub_content"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical"
            android:layout_below="@id/cv_international_news_item"
            android:rowCount="1"
            android:columnCount="2">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_sub_content_main_title_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">

                    <TextView
                        android:id="@+id/tv_sub_content_title_1"
                        android:layout_height="160dp"
                        android:layout_width="wrap_content"
                        android:text="@string/sub_content_title_1"
                        android:typeface="serif"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        android:layout_margin="8dp"
                        android:lineSpacingMultiplier="0.9"
                        />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:src="@drawable/coutinho"
                        android:layout_below="@id/tv_sub_content_title_1"
                        android:layout_alignParentBottom="true"
                        android:scaleType="centerCrop"
                        android:layout_margin="8dp"
                        />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_sub_content_main_title_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">

                    <TextView
                        android:id="@+id/tv_sub_content_title_2"
                        android:layout_height="160dp"
                        android:layout_width="wrap_content"
                        android:text="@string/sub_content_title_2"
                        android:typeface="serif"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        android:layout_margin="8dp"
                        android:lineSpacingMultiplier="0.9"
                        />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:src="@drawable/coutinho"
                        android:layout_below="@id/tv_sub_content_title_2"
                        android:layout_alignParentBottom="true"
                        android:scaleType="centerCrop"
                        android:layout_margin="8dp"
                        />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </GridLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_child_content_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gl_sub_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            app:cardElevation="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/child_content_1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text"
                    android:lineSpacingMultiplier="0.9"
                    android:layout_margin="8dp"
                    android:typeface="serif"
                    />

            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_child_content_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_child_content_1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            app:cardElevation="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/child_content_2"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text"
                    android:lineSpacingMultiplier="0.9"
                    android:layout_margin="8dp"
                    android:typeface="serif"
                    />

            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_child_content_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_child_content_2"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            app:cardElevation="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/child_content_3"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text"
                    android:lineSpacingMultiplier="0.9"
                    android:layout_margin="8dp"
                    android:typeface="serif"
                    />

            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_child_content_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_child_content_3"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            app:cardElevation="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/child_content_4"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text"
                    android:lineSpacingMultiplier="0.9"
                    android:layout_margin="8dp"
                    android:typeface="serif"
                    />

            </FrameLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>